# ai-agents

a2a_mcp_agent/: README.md
a2a_mcp_agent/adk_healthcare_a2a/: README.md  a2a_agent.py
a2a_mcp_agent/adk_multi_agent_orchestrator/: .env  README.md  orchestrator.py  requirements.txt
a2a_mcp_agent/doctor_mcp/: Dockerfile  README.md  server.py
a2a_mcp_agent/healthcare_a2a/: README.md  a2a_agent.py
a2a_mcp_agent/langgraph_websearch_a2a/: Dockerfile  README.md  requirements.txt  web_search_a2a.py
doctor_mcp/: Dockerfile  README.md  server.py
doctor_mcp_client/: README.md  client.py
healthcare_a2a/: Dockerfile  requirements.txt
langraph_agent/: 040_AI Agents in LangGraph_L4_Tavily_Persistence(SQLLite and Thread).ipynb  040_AI Agents in LangGraph_L6_EssayWriter_Reflection_Persistence(SQLLite and Thread)_Streaming.ipynb  068_Long-Term_Agentic_Memory_With_LangGraph_L3_Email_Assistant_With-Semantic_Memory.ipynb  086_Building_and_Evaluating_Data_Agents_L2_MultiAgent_Workflow.ipynb  README.md  prompts_086.py  pyproject.toml
