[project]
name = "langraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langgraph-checkpoint>=4.0.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langmem>=0.0.30",
    "matplotlib>=3.10.9",
    "matplotlib-inline>=0.2.2",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
    "yfinance>=1.3.0",
]
